# snippets-autotools

./: .gitignore  README.md  configure.ac
src/: Makefile.am  main.cpp
src/bitcoin_serialize/: Makefile.am  core.h  main.cpp  serialize.h  serialize_flat_data.h  serialize_uint.h  uint256.h
src/boost/: Makefile.am
src/boost/thread/: Makefile.am
src/boost/thread/bank_account_1/: Makefile.am  main.cpp
src/boost/thread/bank_account_2/: Makefile.am  main.cpp
src/pure_virtual/: Makefile.am  pure_virtual.cpp
